Colaboratory を使用して作成しました

--- a/探索と並び替え.ipynb
+++ b/探索と並び替え.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhNvOxpez7uNbO7+Do5cH2",
+      "authorship_tag": "ABX9TyP3LoZyw1GkcGk7chIldMu4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##検索##"
+        "#検索\n"
       ],
       "metadata": {
         "id": "bjaXdHvvujY2"
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#線形探索アルゴリズム#\n",
+        "#線形探索アルゴリズム\n",
         "　線形探索アルゴリズムを使用する、ランダムな数値の配列から特定の値を探索するプログラム\n",
         "　プログラムは各ステップごとに探索の進行状況を出力します。結果は以下の通りです：\n",
         "\n",
@@ -100,7 +100,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#２分探索#\n",
+        "#２分探索\n",
         "このプログラムは、ソートされたランダムな数値の配列を使用して特定の値を探し、探索の途中経過を出力します。"
       ],
       "metadata": {
@@ -167,7 +167,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##バブルソートのPythonプログラム例##"
+        "#バブルソートのPythonプログラム例"
       ],
       "metadata": {
         "id": "nlVoenWquYQ9"
@@ -261,7 +261,7 @@
       "cell_type": "markdown",
       "source": [
         "# 挿入ソートのプログラム\n",
-        "##挿入ソートの基本原理##\n",
+        "##挿入ソートの基本原理\n",
         "挿入ソートは、カードゲームを整理するような方法でデータを並び替えます。手持ちのカードを一枚ずつ正しい位置に挿入していくように、配列の各要素を適切な位置に挿入していきます。\n",
         "\n",
         "**ステップバイステップの説明**\n",
