Colaboratory を使用して作成しました

--- a/SearchSort.ipynb
+++ b/SearchSort.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3LoZyw1GkcGk7chIldMu4",
+      "collapsed_sections": [
+        "9nQ45-9vzeqB"
+      ],
+      "authorship_tag": "ABX9TyOpxWXtw6XKDKLgXuWbHAQJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#検索\n"
+        "#検索とソート\n"
       ],
       "metadata": {
         "id": "bjaXdHvvujY2"
@@ -80,7 +83,7 @@
         "id": "cBe_QWpav8x7",
         "outputId": "3e3ab0e2-425c-4166-f022-332dd45a1ace"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +152,7 @@
         "id": "cwWBBSK_uqPc",
         "outputId": "e2b3c64b-04dc-4caf-cade-25ed14d875a7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -227,8 +230,12 @@
         "        # 各ステップの配列の状態を出力\n",
         "        print(f\"ステップ {i+1}: {arr}\")\n",
         "\n",
-        "# テスト用の配列\n",
-        "arr = [64, 34, 25, 12, 22, 11, 90]\n",
+        "# テスト用の配列と配列の作成\n",
+        "#arr = [64, 34, 25, 12, 22, 11, 90]\n",
+        "import random\n",
+        "# 7つの2桁のランダムな数値を含む配列を生成する\n",
+        "random_array = [random.randint(10, 99) for _ in range(7)]\n",
+        "arr = random_array\n",
         "\n",
         "# バブルソートの実行\n",
         "bubble_sort_verbose(arr)\n"
@@ -238,22 +245,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-CF9TGrvYAs",
-        "outputId": "97e1d9bb-7130-446a-86d0-c39502ce7727"
+        "outputId": "ed6392b5-c0a5-4cf5-ceb6-46d82f97298b"
       },
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ステップ 1: [34, 25, 12, 22, 11, 64, 90]\n",
-            "ステップ 2: [25, 12, 22, 11, 34, 64, 90]\n",
-            "ステップ 3: [12, 22, 11, 25, 34, 64, 90]\n",
-            "ステップ 4: [12, 11, 22, 25, 34, 64, 90]\n",
-            "ステップ 5: [11, 12, 22, 25, 34, 64, 90]\n",
-            "ステップ 6: [11, 12, 22, 25, 34, 64, 90]\n",
-            "ステップ 7: [11, 12, 22, 25, 34, 64, 90]\n"
+            "ステップ 1: [10, 49, 37, 57, 10, 81, 91]\n",
+            "ステップ 2: [10, 37, 49, 10, 57, 81, 91]\n",
+            "ステップ 3: [10, 37, 10, 49, 57, 81, 91]\n",
+            "ステップ 4: [10, 10, 37, 49, 57, 81, 91]\n",
+            "ステップ 5: [10, 10, 37, 49, 57, 81, 91]\n",
+            "ステップ 6: [10, 10, 37, 49, 57, 81, 91]\n",
+            "ステップ 7: [10, 10, 37, 49, 57, 81, 91]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の数値を変えたいときは次のプログラムでランダムに生成して、コピーして上の２つに入れてください。\n",
+        "import random\n",
+        "\n",
+        "# 7つの2桁のランダムな数値を含む配列を生成する\n",
+        "random_array = [random.randint(10, 99) for _ in range(7)]\n",
+        "random_array\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GY6q2BL_tcwS",
+        "outputId": "ad9127e4-864e-484f-bf45-e083f5eff6c0"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[59, 80, 63, 39, 37, 91, 98]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     },
@@ -336,7 +374,7 @@
         "id": "RdmnchyizcSi",
         "outputId": "03d9cadf-5993-4d0d-a40c-16caa908c4f6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +465,7 @@
         "id": "AXuo11M24jV-",
         "outputId": "81638160-e832-4484-c43e-80ddc1ec61c4"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
