--- a/SearchSort.ipynb
+++ b/SearchSort.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "9nQ45-9vzeqB"
       ],
-      "authorship_tag": "ABX9TyOpxWXtw6XKDKLgXuWbHAQJ",
+      "authorship_tag": "ABX9TyO6Z+O0SrDQJvPX/+JqfJF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "\n",
         "# 探索する値\n",
         "x = random.choice(arr) # 配列からランダムに一つの値を選ぶ\n",
-        "\n",
+        "print (x, \"を探します。\")\n",
         "# リニアサーチの実行と結果の出力\n",
         "result = linear_search_verbose(arr, x)\n",
         "print(\"配列:\", arr)\n",
@@ -81,21 +81,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cBe_QWpav8x7",
-        "outputId": "3e3ab0e2-425c-4166-f022-332dd45a1ace"
+        "outputId": "b383e4a9-8e41-400f-8a51-4a6befbe14cd"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ステップ 1: 現在の要素は 9\n",
-            "ステップ 2: 現在の要素は 33\n",
+            "39 を探します。\n",
+            "ステップ 1: 現在の要素は 58\n",
+            "ステップ 2: 現在の要素は 99\n",
             "ステップ 3: 現在の要素は 37\n",
-            "ステップ 4: 現在の要素は 36\n",
-            "ステップ 5: 現在の要素は 7\n",
-            "配列: [9, 33, 37, 36, 7, 26, 54, 42, 57, 73]\n",
-            "要素 7 は位置 4 で見つかりました。\n"
+            "ステップ 4: 現在の要素は 49\n",
+            "ステップ 5: 現在の要素は 54\n",
+            "ステップ 6: 現在の要素は 55\n",
+            "ステップ 7: 現在の要素は 52\n",
+            "ステップ 8: 現在の要素は 39\n",
+            "配列: [58, 99, 37, 49, 54, 55, 52, 39, 64, 85]\n",
+            "要素 39 は位置 7 で見つかりました。\n"
           ]
         }
       ]
@@ -139,7 +143,7 @@
         "\n",
         "# 探索する値\n",
         "x = random.choice(arr) # 配列からランダムに一つの値を選ぶ\n",
-        "\n",
+        "print(x, \"を探します。\")\n",
         "# 二分探索の実行と結果の出力\n",
         "result = binary_search_verbose(arr, x)\n",
         "print(\"配列:\", arr)\n",
@@ -150,19 +154,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cwWBBSK_uqPc",
-        "outputId": "e2b3c64b-04dc-4caf-cade-25ed14d875a7"
+        "outputId": "0c498250-93f3-47ef-a9e1-19c2b1cdd39a"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ステップ 1: 現在の中間位置は 4, 探索範囲は [4, 9, 16, 19, 20, 33, 44, 47, 54, 62]\n",
-            "ステップ 2: 現在の中間位置は 7, 探索範囲は [33, 44, 47, 54, 62]\n",
-            "ステップ 3: 現在の中間位置は 8, 探索範囲は [54, 62]\n",
-            "配列: [4, 9, 16, 19, 20, 33, 44, 47, 54, 62]\n",
-            "要素 54 は位置 8 で見つかりました。\n"
+            "91 を探します。\n",
+            "ステップ 1: 現在の中間位置は 4, 探索範囲は [26, 33, 50, 54, 67, 75, 77, 91, 92, 93]\n",
+            "ステップ 2: 現在の中間位置は 7, 探索範囲は [75, 77, 91, 92, 93]\n",
+            "配列: [26, 33, 50, 54, 67, 75, 77, 91, 92, 93]\n",
+            "要素 91 は位置 7 で見つかりました。\n"
           ]
         }
       ]
@@ -178,13 +182,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g9RNQ_7ZuTom",
-        "outputId": "ca4c7c13-5de0-45c0-a649-f1deb2a6d3f5"
+        "outputId": "ecf3712f-4f75-441d-803b-e3f357ee3e37"
       },
       "outputs": [
         {
@@ -227,8 +231,9 @@
         "            # 隣接要素を比較し、必要に応じて交換\n",
         "            if arr[j] > arr[j+1]:\n",
         "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
-        "        # 各ステップの配列の状態を出力\n",
-        "        print(f\"ステップ {i+1}: {arr}\")\n",
+        "            # 各ステップの配列の状態を出力\n",
+        "            print(i,\"-\",j)\n",
+        "            print(f\"ステップ {i+1}: {arr}\")\n",
         "\n",
         "# テスト用の配列と配列の作成\n",
         "#arr = [64, 34, 25, 12, 22, 11, 90]\n",
@@ -245,21 +250,56 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-CF9TGrvYAs",
-        "outputId": "ed6392b5-c0a5-4cf5-ceb6-46d82f97298b"
+        "outputId": "09b7409b-aa07-40b3-d0e5-abd94fd56c82"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ステップ 1: [10, 49, 37, 57, 10, 81, 91]\n",
-            "ステップ 2: [10, 37, 49, 10, 57, 81, 91]\n",
-            "ステップ 3: [10, 37, 10, 49, 57, 81, 91]\n",
-            "ステップ 4: [10, 10, 37, 49, 57, 81, 91]\n",
-            "ステップ 5: [10, 10, 37, 49, 57, 81, 91]\n",
-            "ステップ 6: [10, 10, 37, 49, 57, 81, 91]\n",
-            "ステップ 7: [10, 10, 37, 49, 57, 81, 91]\n"
+            "0 - 0\n",
+            "ステップ 1: [29, 54, 42, 44, 59, 46, 43]\n",
+            "0 - 1\n",
+            "ステップ 1: [29, 42, 54, 44, 59, 46, 43]\n",
+            "0 - 2\n",
+            "ステップ 1: [29, 42, 44, 54, 59, 46, 43]\n",
+            "0 - 3\n",
+            "ステップ 1: [29, 42, 44, 54, 59, 46, 43]\n",
+            "0 - 4\n",
+            "ステップ 1: [29, 42, 44, 54, 46, 59, 43]\n",
+            "0 - 5\n",
+            "ステップ 1: [29, 42, 44, 54, 46, 43, 59]\n",
+            "1 - 0\n",
+            "ステップ 2: [29, 42, 44, 54, 46, 43, 59]\n",
+            "1 - 1\n",
+            "ステップ 2: [29, 42, 44, 54, 46, 43, 59]\n",
+            "1 - 2\n",
+            "ステップ 2: [29, 42, 44, 54, 46, 43, 59]\n",
+            "1 - 3\n",
+            "ステップ 2: [29, 42, 44, 46, 54, 43, 59]\n",
+            "1 - 4\n",
+            "ステップ 2: [29, 42, 44, 46, 43, 54, 59]\n",
+            "2 - 0\n",
+            "ステップ 3: [29, 42, 44, 46, 43, 54, 59]\n",
+            "2 - 1\n",
+            "ステップ 3: [29, 42, 44, 46, 43, 54, 59]\n",
+            "2 - 2\n",
+            "ステップ 3: [29, 42, 44, 46, 43, 54, 59]\n",
+            "2 - 3\n",
+            "ステップ 3: [29, 42, 44, 43, 46, 54, 59]\n",
+            "3 - 0\n",
+            "ステップ 4: [29, 42, 44, 43, 46, 54, 59]\n",
+            "3 - 1\n",
+            "ステップ 4: [29, 42, 44, 43, 46, 54, 59]\n",
+            "3 - 2\n",
+            "ステップ 4: [29, 42, 43, 44, 46, 54, 59]\n",
+            "4 - 0\n",
+            "ステップ 5: [29, 42, 43, 44, 46, 54, 59]\n",
+            "4 - 1\n",
+            "ステップ 5: [29, 42, 43, 44, 46, 54, 59]\n",
+            "5 - 0\n",
+            "ステップ 6: [29, 42, 43, 44, 46, 54, 59]\n"
           ]
         }
       ]
@@ -281,7 +321,7 @@
         "id": "GY6q2BL_tcwS",
         "outputId": "ad9127e4-864e-484f-bf45-e083f5eff6c0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
