Colaboratory を使用して作成しました

--- a/SearchSort.ipynb
+++ b/SearchSort.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "9nQ45-9vzeqB"
       ],
-      "authorship_tag": "ABX9TyO6Z+O0SrDQJvPX/+JqfJF8",
+      "authorship_tag": "ABX9TyPGnrdm7XbZwfe7kiuyoikW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,7 @@
         "\n",
         "# 探索する値\n",
         "x = random.choice(arr) # 配列からランダムに一つの値を選ぶ\n",
+        "print(\"配列:\", arr)\n",
         "print (x, \"を探します。\")\n",
         "# リニアサーチの実行と結果の出力\n",
         "result = linear_search_verbose(arr, x)\n",
@@ -81,25 +82,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cBe_QWpav8x7",
-        "outputId": "b383e4a9-8e41-400f-8a51-4a6befbe14cd"
+        "outputId": "ac3efd33-ec0a-4586-934b-17566e231cfe"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "39 を探します。\n",
-            "ステップ 1: 現在の要素は 58\n",
-            "ステップ 2: 現在の要素は 99\n",
-            "ステップ 3: 現在の要素は 37\n",
-            "ステップ 4: 現在の要素は 49\n",
-            "ステップ 5: 現在の要素は 54\n",
-            "ステップ 6: 現在の要素は 55\n",
-            "ステップ 7: 現在の要素は 52\n",
-            "ステップ 8: 現在の要素は 39\n",
-            "配列: [58, 99, 37, 49, 54, 55, 52, 39, 64, 85]\n",
-            "要素 39 は位置 7 で見つかりました。\n"
+            "配列: [8, 39, 52, 69, 27, 29, 60, 93, 51, 96]\n",
+            "52 を探します。\n",
+            "ステップ 1: 現在の要素は 8\n",
+            "ステップ 2: 現在の要素は 39\n",
+            "ステップ 3: 現在の要素は 52\n",
+            "配列: [8, 39, 52, 69, 27, 29, 60, 93, 51, 96]\n",
+            "要素 52 は位置 2 で見つかりました。\n"
           ]
         }
       ]
@@ -143,6 +140,7 @@
         "\n",
         "# 探索する値\n",
         "x = random.choice(arr) # 配列からランダムに一つの値を選ぶ\n",
+        "print(\"配列:\", arr)\n",
         "print(x, \"を探します。\")\n",
         "# 二分探索の実行と結果の出力\n",
         "result = binary_search_verbose(arr, x)\n",
@@ -154,19 +152,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cwWBBSK_uqPc",
-        "outputId": "0c498250-93f3-47ef-a9e1-19c2b1cdd39a"
+        "outputId": "c6eb6ca2-84cf-4fe7-a694-59ea84cbd0b5"
       },
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "91 を探します。\n",
-            "ステップ 1: 現在の中間位置は 4, 探索範囲は [26, 33, 50, 54, 67, 75, 77, 91, 92, 93]\n",
-            "ステップ 2: 現在の中間位置は 7, 探索範囲は [75, 77, 91, 92, 93]\n",
-            "配列: [26, 33, 50, 54, 67, 75, 77, 91, 92, 93]\n",
-            "要素 91 は位置 7 で見つかりました。\n"
+            "配列: [12, 21, 27, 30, 33, 53, 55, 59, 64, 73]\n",
+            "12 を探します。\n",
+            "ステップ 1: 現在の中間位置は 4, 探索範囲は [12, 21, 27, 30, 33, 53, 55, 59, 64, 73]\n",
+            "ステップ 2: 現在の中間位置は 1, 探索範囲は [12, 21, 27, 30]\n",
+            "ステップ 3: 現在の中間位置は 0, 探索範囲は [12]\n",
+            "配列: [12, 21, 27, 30, 33, 53, 55, 59, 64, 73]\n",
+            "要素 12 は位置 0 で見つかりました。\n"
           ]
         }
       ]
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,7 +252,7 @@
         "id": "a-CF9TGrvYAs",
         "outputId": "09b7409b-aa07-40b3-d0e5-abd94fd56c82"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
