Colaboratory を使用して作成しました

--- a/暗号理解.ipynb
+++ b/暗号理解.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8UoiaOXP47KgeejXnLGOG",
+      "authorship_tag": "ABX9TyOTOWHR+HCMgoHtLOBhxRUE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ひらがなの入力を人文字ずらして、もとにもどす。シーザー暗号"
+        "ひらがなの入力の文字をずらして、もとにもどす。シーザー暗号"
       ],
       "metadata": {
         "id": "1i86UwyIZGgO"
@@ -139,7 +139,7 @@
         "id": "EHRs0ebFZR_N",
         "outputId": "6734587b-d724-4ecd-ea79-5d3881ed198d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install cryptography\n"
+        "!pip install cryptography"
       ],
       "metadata": {
         "colab": {
@@ -174,7 +174,7 @@
         "id": "2nBq_F-EalzO",
         "outputId": "6794ed7e-bac9-42de-8429-9cf9fb889ab2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +207,7 @@
         "public_key = private_key.public_key()\n",
         "\n",
         "# メッセージのエンコード\n",
-        "message = \"これは秘密のメッセージです\".encode('utf-8')\n",
+        "message = \"これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\".encode('utf-8')\n",
         "\n",
         "# 公開鍵を使ってメッセージを暗号化\n",
         "encrypted_message = public_key.encrypt(\n",
@@ -238,20 +238,89 @@
       ],
       "metadata": {
         "id": "6qNs4vwYbD63",
-        "outputId": "697d3b01-d089-41fd-faf9-257f4b55eee4",
+        "outputId": "24b263d8-55af-40f6-ab60-5dcf74273cb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "元のメッセージ: これは秘密のメッセージです\n",
-            "暗号化されたメッセージ: b\"\\x9f|Y\\xb4\\xd8\\xcfq\\xdfu\\xd8\\xc6\\xbe\\xd7\\x05\\x1d\\n4v\\x8a\\x9e\\x1c\\xb1]9.L\\xa9\\x867\\xe5\\x1c\\x03\\xc8\\xb3\\xcan\\xe4!\\xa1-\\xaa\\n\\xef\\x14?j)\\x8d\\xd3\\x90\\x1d\\xe6\\xb1\\xa0\\x15\\x98\\xbbQ\\x14Rf\\xb8\\x86\\xe1\\xc2e\\xbf\\xc5U\\x0c\\x1e\\xa9\\x1a\\x99X\\xf8\\xb1\\x9f&\\xe0d\\xacWJI\\xeee\\xc8\\x05\\xcd\\xa0\\x1dW\\xcf\\x1a\\xbf>\\xaa\\xdc\\\\\\xe1/\\xefw\\xa9)\\xde\\xbe\\xe3\\x17\\x94\\x00\\x15\\xac\\xe5\\x12\\xcc\\xf0\\x97\\x1a\\x12W\\xe2o\\x954\\x19\\x01\\xdf\\xe2\\x10\\xc3J\\x8a\\x9f\\x9b\\xb9\\xb4\\x9c\\xe4\\xb5aJ\\x8d\\x8b\\x9c\\xa6\\x9b\\x7fBd\\xed\\xa2d\\x01X,\\x19\\x1b\\xe3\\xb4\\xf57N?\\xf8\\xadex\\x1bx\\xf0(\\xd55(\\x1d\\x84\\xaag\\xaf\\xcb\\xc5\\xd0NQL#_\\xe3\\x8a\\x04\\xcc\\x16\\x92\\na;\\xe9\\xc9K}ak\\x0eC\\xf6\\xc2Y\\x81\\x91\\x9dz\\xeaTHh\\xef\\xdc<\\xd20\\x81\\x1a\\xb4\\xaa\\x17\\x95\\xa6b\\xee\\xe0'e\\x82\\x10\\x82\\xd3\\x9f\\x8a\\x1cG=\\xc2\\x91\\xd7`R\\x9b5V\\xa0\\xf8\\xcf\\xb1\\x15\"\n",
-            "復号化されたメッセージ: これは秘密のメッセージです\n"
+            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n",
+            "暗号化されたメッセージ: b\"I\\xf2=a\\x00dYt\\xa1I\\x03\\x91\\x10\\xb3=\\xb7\\xa8\\n\\x0c\\x17wu\\xe2V\\x8f\\x11\\xe0\\xe0\\xdd'\\x97%\\xa4%\\xeeg\\xe10\\xb0d\\xbd\\xc1n\\x82\\xf6\\\\\\x7f=6\\r\\xe8e\\xaf\\x850?'\\x9b\\x1e,\\xa7\\x03\\x9e\\xc8>z\\xa2\\xea6,\\xc7t\\xee\\xf4\\x84\\xa0\\x16\\x8b\\xeaF\\xaa\\x14\\x9c\\xad\\xbd\\xa8=\\xfaz\\xe1\\x13}4\\x03\\x87\\x80\\\\\\xec\\t+\\x82&\\xb1\\xfb\\xe4\\xa1\\x13T\\xcfcF\\x8e\\x0e\\x04]\\xd0\\xb5\\xae\\xe9\\xd9\\xfec\\xdb\\x88\\x93\\xa8\\xe8\\xc55\\xf4\\xeex\\x11\\xf3\\x0fb\\x0e\\xd2S\\xa3\\xbb\\x94\\xe5B+0\\xbbD\\xfb\\xe2\\x06\\x04\\x94\\xa4=\\xe59K\\xf8\\n\\xe4N\\x95\\xb8\\xc4#\\xcfo\\x0b\\xd7\\xe1\\x99\\xc8(\\xbd\\xc8(\\xb0PZ\\xdd\\xce\\xd2\\xa7\\xac\\xd7\\x88\\xb7\\x8e\\xfcc\\x98U{6\\x9c\\x9e\\xb7\\x14\\xad\\xc4b\\xa4Q\\xc5z\\xe7\\xbaG\\xdaL\\xfe\\xea\\x9c\\xe6Z=\\x84\\x93p\\xda(JT\\xe6\\x15\\x90f5T\\\\a\\xcc\\x7fD\\x91o~\\xb7\\x96\\xf0x\\x10\\xd4BOc\\\\\\xba\\x12\\x18N\\xa3?0\\xfa\"\n",
+            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"元のメッセージ:\", message.decode('utf-8'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SX8X1UKtiwYS",
+        "outputId": "84e7e315-c985-4505-c859-a55085640ab5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"暗号化されたメッセージ:\", encrypted_message)"
+      ],
+      "metadata": {
+        "id": "SwO1bpt8i1GJ",
+        "outputId": "6d7a862d-d297-446a-bf5d-04bbb9ad3eb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "暗号化されたメッセージ: b\"I\\xf2=a\\x00dYt\\xa1I\\x03\\x91\\x10\\xb3=\\xb7\\xa8\\n\\x0c\\x17wu\\xe2V\\x8f\\x11\\xe0\\xe0\\xdd'\\x97%\\xa4%\\xeeg\\xe10\\xb0d\\xbd\\xc1n\\x82\\xf6\\\\\\x7f=6\\r\\xe8e\\xaf\\x850?'\\x9b\\x1e,\\xa7\\x03\\x9e\\xc8>z\\xa2\\xea6,\\xc7t\\xee\\xf4\\x84\\xa0\\x16\\x8b\\xeaF\\xaa\\x14\\x9c\\xad\\xbd\\xa8=\\xfaz\\xe1\\x13}4\\x03\\x87\\x80\\\\\\xec\\t+\\x82&\\xb1\\xfb\\xe4\\xa1\\x13T\\xcfcF\\x8e\\x0e\\x04]\\xd0\\xb5\\xae\\xe9\\xd9\\xfec\\xdb\\x88\\x93\\xa8\\xe8\\xc55\\xf4\\xeex\\x11\\xf3\\x0fb\\x0e\\xd2S\\xa3\\xbb\\x94\\xe5B+0\\xbbD\\xfb\\xe2\\x06\\x04\\x94\\xa4=\\xe59K\\xf8\\n\\xe4N\\x95\\xb8\\xc4#\\xcfo\\x0b\\xd7\\xe1\\x99\\xc8(\\xbd\\xc8(\\xb0PZ\\xdd\\xce\\xd2\\xa7\\xac\\xd7\\x88\\xb7\\x8e\\xfcc\\x98U{6\\x9c\\x9e\\xb7\\x14\\xad\\xc4b\\xa4Q\\xc5z\\xe7\\xbaG\\xdaL\\xfe\\xea\\x9c\\xe6Z=\\x84\\x93p\\xda(JT\\xe6\\x15\\x90f5T\\\\a\\xcc\\x7fD\\x91o~\\xb7\\x96\\xf0x\\x10\\xd4BOc\\\\\\xba\\x12\\x18N\\xa3?0\\xfa\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"復号化されたメッセージ:\", decrypted_message)"
+      ],
+      "metadata": {
+        "id": "Cjx_zXRti3XK",
+        "outputId": "aa1e5dc1-9f3a-4c4b-c608-ad1bfcde6dde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
           ]
         }
       ]
