Colaboratory を使用して作成しました

--- a/暗号理解.ipynb
+++ b/暗号理解.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTOWHR+HCMgoHtLOBhxRUE",
+      "authorship_tag": "ABX9TyMQ3Wi6lTniw1hcI2MKSBFe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,20 +43,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V1yHwWTJYL23",
-        "outputId": "bd199abd-044c-4d3b-a464-7497d1e1a77e"
+        "outputId": "e5b1d5c0-7b5f-400a-a0f5-0f23458ff218"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('Hello, World! Good morning!',\n",
-              " 'Mjqqt, Btwqi! Ltti rtwsnsl!',\n",
-              " 'Hello, World! Good morning!')"
+              "('Hello, World! Good morning! Someya.',\n",
+              " 'Mjqqt, Btwqi! Ltti rtwsnsl! Xtrjdf.',\n",
+              " 'Hello, World! Good morning! Someya.')"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 43
         }
       ],
       "source": [
@@ -86,13 +86,24 @@
         "    return result\n",
         "\n",
         "# Example usage of the caesar_cipher function\n",
-        "example_text = \"Hello, World! Good morning!\"\n",
+        "example_text = \"Hello, World! Good morning! Someya.\"\n",
         "shift_amount = 5\n",
         "encrypted_text = caesar_cipher(example_text, shift_amount)\n",
         "decrypted_text = caesar_cipher(encrypted_text, -shift_amount)\n",
         "\n",
         "example_text, encrypted_text, decrypted_text\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decrypted_text = caesar_cipher(encrypted_text, -shift_amount)"
+      ],
+      "metadata": {
+        "id": "z_ucjR_tpSgZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -125,8 +136,8 @@
         "    return result\n",
         "\n",
         "# Example usage of the function\n",
-        "example_text_jp = \"こんにちは\"\n",
-        "shift_amount_jp = 1\n",
+        "example_text_jp = \"こんにちは,せかい\"\n",
+        "shift_amount_jp = 5\n",
         "encrypted_text_jp = caesar_cipher_japanese(example_text_jp, shift_amount_jp)\n",
         "decrypted_text_jp = caesar_cipher_japanese(encrypted_text_jp, -shift_amount_jp)\n",
         "\n",
@@ -137,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EHRs0ebFZR_N",
-        "outputId": "6734587b-d724-4ecd-ea79-5d3881ed198d"
+        "outputId": "662ec953-6511-4360-8498-c0354406922e"
       },
       "execution_count": null,
       "outputs": [
@@ -145,11 +156,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('こんにちは', 'さあぬつひ', 'こんにちは')"
+              "('こんにちは,せかい', 'そおひにま,てさき', 'こんにちは,せかい')"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 46
         }
       ]
     },
@@ -172,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2nBq_F-EalzO",
-        "outputId": "6794ed7e-bac9-42de-8429-9cf9fb889ab2"
+        "outputId": "64e94f21-6648-4f55-bc21-14549f39b853"
       },
       "execution_count": null,
       "outputs": [
@@ -207,7 +218,7 @@
         "public_key = private_key.public_key()\n",
         "\n",
         "# メッセージのエンコード\n",
-        "message = \"これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\".encode('utf-8')\n",
+        "message = \"これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\".encode('utf-8')\n",
         "\n",
         "# 公開鍵を使ってメッセージを暗号化\n",
         "encrypted_message = public_key.encrypt(\n",
@@ -219,39 +230,38 @@
         "    )\n",
         ")\n",
         "\n",
-        "# 秘密鍵を使って暗号化されたメッセージを復号化\n",
-        "decrypted_message = private_key.decrypt(\n",
-        "    encrypted_message,\n",
-        "    padding.OAEP(\n",
-        "        mgf=padding.MGF1(algorithm=hashes.SHA256()),\n",
-        "        algorithm=hashes.SHA256(),\n",
-        "        label=None\n",
-        "    )\n",
-        ")\n",
+        "# # 秘密鍵を使って暗号化されたメッセージを復号化\n",
+        "# decrypted_message = private_key.decrypt(\n",
+        "#     encrypted_message,\n",
+        "#     padding.OAEP(\n",
+        "#         mgf=padding.MGF1(algorithm=hashes.SHA256()),\n",
+        "#         algorithm=hashes.SHA256(),\n",
+        "#         label=None\n",
+        "#     )\n",
+        "# )\n",
         "\n",
-        "# 復号化されたメッセージをデコード\n",
-        "decrypted_message = decrypted_message.decode('utf-8')\n",
+        "# # 復号化されたメッセージをデコード\n",
+        "# decrypted_message = decrypted_message.decode('utf-8')\n",
         "\n",
         "print(\"元のメッセージ:\", message.decode('utf-8'))\n",
         "print(\"暗号化されたメッセージ:\", encrypted_message)\n",
-        "print(\"復号化されたメッセージ:\", decrypted_message)\n"
+        "\n"
       ],
       "metadata": {
         "id": "6qNs4vwYbD63",
-        "outputId": "24b263d8-55af-40f6-ab60-5dcf74273cb1",
+        "outputId": "61b5580e-b92f-45aa-9864-00df40d670ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n",
-            "暗号化されたメッセージ: b\"I\\xf2=a\\x00dYt\\xa1I\\x03\\x91\\x10\\xb3=\\xb7\\xa8\\n\\x0c\\x17wu\\xe2V\\x8f\\x11\\xe0\\xe0\\xdd'\\x97%\\xa4%\\xeeg\\xe10\\xb0d\\xbd\\xc1n\\x82\\xf6\\\\\\x7f=6\\r\\xe8e\\xaf\\x850?'\\x9b\\x1e,\\xa7\\x03\\x9e\\xc8>z\\xa2\\xea6,\\xc7t\\xee\\xf4\\x84\\xa0\\x16\\x8b\\xeaF\\xaa\\x14\\x9c\\xad\\xbd\\xa8=\\xfaz\\xe1\\x13}4\\x03\\x87\\x80\\\\\\xec\\t+\\x82&\\xb1\\xfb\\xe4\\xa1\\x13T\\xcfcF\\x8e\\x0e\\x04]\\xd0\\xb5\\xae\\xe9\\xd9\\xfec\\xdb\\x88\\x93\\xa8\\xe8\\xc55\\xf4\\xeex\\x11\\xf3\\x0fb\\x0e\\xd2S\\xa3\\xbb\\x94\\xe5B+0\\xbbD\\xfb\\xe2\\x06\\x04\\x94\\xa4=\\xe59K\\xf8\\n\\xe4N\\x95\\xb8\\xc4#\\xcfo\\x0b\\xd7\\xe1\\x99\\xc8(\\xbd\\xc8(\\xb0PZ\\xdd\\xce\\xd2\\xa7\\xac\\xd7\\x88\\xb7\\x8e\\xfcc\\x98U{6\\x9c\\x9e\\xb7\\x14\\xad\\xc4b\\xa4Q\\xc5z\\xe7\\xbaG\\xdaL\\xfe\\xea\\x9c\\xe6Z=\\x84\\x93p\\xda(JT\\xe6\\x15\\x90f5T\\\\a\\xcc\\x7fD\\x91o~\\xb7\\x96\\xf0x\\x10\\xd4BOc\\\\\\xba\\x12\\x18N\\xa3?0\\xfa\"\n",
-            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
+            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n",
+            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n"
           ]
         }
       ]
@@ -266,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SX8X1UKtiwYS",
-        "outputId": "84e7e315-c985-4505-c859-a55085640ab5"
+        "outputId": "58ebea9b-4373-4e1b-fead-1e39805ef768"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,19 +295,57 @@
         "print(\"暗号化されたメッセージ:\", encrypted_message)"
       ],
       "metadata": {
-        "id": "SwO1bpt8i1GJ",
-        "outputId": "6d7a862d-d297-446a-bf5d-04bbb9ad3eb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SwO1bpt8i1GJ",
+        "outputId": "7bcf3161-82e4-4bbb-fc47-d759679ebeec"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "暗号化されたメッセージ: b\"I\\xf2=a\\x00dYt\\xa1I\\x03\\x91\\x10\\xb3=\\xb7\\xa8\\n\\x0c\\x17wu\\xe2V\\x8f\\x11\\xe0\\xe0\\xdd'\\x97%\\xa4%\\xeeg\\xe10\\xb0d\\xbd\\xc1n\\x82\\xf6\\\\\\x7f=6\\r\\xe8e\\xaf\\x850?'\\x9b\\x1e,\\xa7\\x03\\x9e\\xc8>z\\xa2\\xea6,\\xc7t\\xee\\xf4\\x84\\xa0\\x16\\x8b\\xeaF\\xaa\\x14\\x9c\\xad\\xbd\\xa8=\\xfaz\\xe1\\x13}4\\x03\\x87\\x80\\\\\\xec\\t+\\x82&\\xb1\\xfb\\xe4\\xa1\\x13T\\xcfcF\\x8e\\x0e\\x04]\\xd0\\xb5\\xae\\xe9\\xd9\\xfec\\xdb\\x88\\x93\\xa8\\xe8\\xc55\\xf4\\xeex\\x11\\xf3\\x0fb\\x0e\\xd2S\\xa3\\xbb\\x94\\xe5B+0\\xbbD\\xfb\\xe2\\x06\\x04\\x94\\xa4=\\xe59K\\xf8\\n\\xe4N\\x95\\xb8\\xc4#\\xcfo\\x0b\\xd7\\xe1\\x99\\xc8(\\xbd\\xc8(\\xb0PZ\\xdd\\xce\\xd2\\xa7\\xac\\xd7\\x88\\xb7\\x8e\\xfcc\\x98U{6\\x9c\\x9e\\xb7\\x14\\xad\\xc4b\\xa4Q\\xc5z\\xe7\\xbaG\\xdaL\\xfe\\xea\\x9c\\xe6Z=\\x84\\x93p\\xda(JT\\xe6\\x15\\x90f5T\\\\a\\xcc\\x7fD\\x91o~\\xb7\\x96\\xf0x\\x10\\xd4BOc\\\\\\xba\\x12\\x18N\\xa3?0\\xfa\"\n"
+            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 秘密鍵を使って暗号化されたメッセージを復号化\n",
+        "decrypted_message = private_key.decrypt(\n",
+        "    encrypted_message,\n",
+        "    padding.OAEP(\n",
+        "        mgf=padding.MGF1(algorithm=hashes.SHA256()),\n",
+        "        algorithm=hashes.SHA256(),\n",
+        "        label=None\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# 復号化されたメッセージをデコード\n",
+        "decrypted_message = decrypted_message.decode('utf-8')\n",
+        "\n",
+        "print(\"暗号化されたメッセージ:\", encrypted_message)\n",
+        "print(\"復号化されたメッセージ:\", decrypted_message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YCEkgVUajXiS",
+        "outputId": "ab59aefe-a821-46d1-ddb4-0b78b53521d8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n",
+            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n"
           ]
         }
       ]
@@ -308,19 +356,19 @@
         "print(\"復号化されたメッセージ:\", decrypted_message)"
       ],
       "metadata": {
-        "id": "Cjx_zXRti3XK",
-        "outputId": "aa1e5dc1-9f3a-4c4b-c608-ad1bfcde6dde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Cjx_zXRti3XK",
+        "outputId": "7ff293c1-47ba-43e5-e01f-d8be04e45424"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
+            "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n"
           ]
         }
       ]
