Colaboratory を使用して作成しました

--- a/暗号理解.ipynb
+++ b/暗号理解.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ3Wi6lTniw1hcI2MKSBFe",
+      "authorship_tag": "ABX9TyOeAJihXuNa4y0vg3Ib0WHv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V1yHwWTJYL23",
-        "outputId": "e5b1d5c0-7b5f-400a-a0f5-0f23458ff218"
+        "outputId": "5d1dbe14-4894-4722-da0b-84d1f62837d5"
       },
       "outputs": [
         {
@@ -56,7 +56,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 2
         }
       ],
       "source": [
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "z_ucjR_tpSgZ"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -148,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EHRs0ebFZR_N",
-        "outputId": "662ec953-6511-4360-8498-c0354406922e"
+        "outputId": "cbd9654b-6790-4fe5-f0ec-601be8e9380b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +160,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 4
         }
       ]
     },
@@ -183,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2nBq_F-EalzO",
-        "outputId": "64e94f21-6648-4f55-bc21-14549f39b853"
+        "outputId": "edd8415f-b326-4366-ed2d-0d3055cc82cb"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,19 +249,19 @@
       ],
       "metadata": {
         "id": "6qNs4vwYbD63",
-        "outputId": "61b5580e-b92f-45aa-9864-00df40d670ba",
+        "outputId": "0c3b7140-1c1b-476b-c695-7e9a8997a99c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n",
-            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n"
+            "暗号化されたメッセージ: b'~r\\xdf\\r\\x84c^[\\x89\\x1c7\\x03\\x8cw!\\xf1\\x8fQ\\xc8\\xbes\\xe4\\xd7\\xbc\\xe5\\xa7\\x0e\\x14\\xfdg\\x8a\\t\\x9a\\'a\\xb2F\\x9e\\x12\\xbf{\\x0f\\xac\\x9cxZ\\xf7\\xfe\\xd9\\xd6\\xd7=?\\x19\\xa2\\xae\\xff\\xf0\\x98W \\xf0\\x9a\\xb4\\xd3\\x14!)\\xab\\xb2\\xaflV\\x06\\xd6\\xaa\\xd6A\\xafvA\\xfd\\xa5QG\\xa0\\x84\\x9a]{[\\xf7\\xa9\\xfdqza,vH\\xd0\\xac]7N\\xab3\\x8bxMi\\x88\\x05\\xc9\\x7f\\r@\\xf8\\xae;\\x17\\xbbj\\xa2\\x1e\\x1c\\xb5\\xcbj+\\'=\\xf0z\\xc5\\xba2\\x84\\xafW\\x8e\\x18\\xa4\\\\0\\x97\\x84\\xc67\\x18\\x80G2\\xfc\\xe7t\\x1e\\x81\\xea_\\x89\\xc9\\xfd\\rd\\x117\\\\\\x9f$G\\xa1\\x16\\x8dh\\x88#\\xf8\\xb9\\xa2qr_%\\x8e\\x03\\x90\\x86\\xd6\\xc3\\xdf|w\\xdb\\xcc@\\xa4a\\xed\\xd7D3\"\\xdd\\x9fk<\\x1f\\xf1\\xc1J\\xa9\\xf0\\xfe7\\xc6:0\\xed\\xcd\\xcet\\xfb\\x9e\\x10\\xf6Y\\xe9\\xa2O\\x12R\\x0f]\\xee\\xf3\\xf8\\x1b\\x8f@s\\xde\\xaf\\xc6#\\x1f\\x0eZ\\xf4\\xa46\\xb8\\x12\\xf9*\\xb3'\n"
           ]
         }
       ]
@@ -276,15 +276,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SX8X1UKtiwYS",
-        "outputId": "58ebea9b-4373-4e1b-fead-1e39805ef768"
+        "outputId": "60ca8edd-3ec5-4190-ab8d-12c7cf26d302"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ\n"
+            "元のメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n"
           ]
         }
       ]
@@ -299,18 +299,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SwO1bpt8i1GJ",
-        "outputId": "7bcf3161-82e4-4bbb-fc47-d759679ebeec"
+        "outputId": "c61565e8-b770-4ba0-b64a-5e2c3640eddf"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n"
+            "暗号化されたメッセージ: b'~r\\xdf\\r\\x84c^[\\x89\\x1c7\\x03\\x8cw!\\xf1\\x8fQ\\xc8\\xbes\\xe4\\xd7\\xbc\\xe5\\xa7\\x0e\\x14\\xfdg\\x8a\\t\\x9a\\'a\\xb2F\\x9e\\x12\\xbf{\\x0f\\xac\\x9cxZ\\xf7\\xfe\\xd9\\xd6\\xd7=?\\x19\\xa2\\xae\\xff\\xf0\\x98W \\xf0\\x9a\\xb4\\xd3\\x14!)\\xab\\xb2\\xaflV\\x06\\xd6\\xaa\\xd6A\\xafvA\\xfd\\xa5QG\\xa0\\x84\\x9a]{[\\xf7\\xa9\\xfdqza,vH\\xd0\\xac]7N\\xab3\\x8bxMi\\x88\\x05\\xc9\\x7f\\r@\\xf8\\xae;\\x17\\xbbj\\xa2\\x1e\\x1c\\xb5\\xcbj+\\'=\\xf0z\\xc5\\xba2\\x84\\xafW\\x8e\\x18\\xa4\\\\0\\x97\\x84\\xc67\\x18\\x80G2\\xfc\\xe7t\\x1e\\x81\\xea_\\x89\\xc9\\xfd\\rd\\x117\\\\\\x9f$G\\xa1\\x16\\x8dh\\x88#\\xf8\\xb9\\xa2qr_%\\x8e\\x03\\x90\\x86\\xd6\\xc3\\xdf|w\\xdb\\xcc@\\xa4a\\xed\\xd7D3\"\\xdd\\x9fk<\\x1f\\xf1\\xc1J\\xa9\\xf0\\xfe7\\xc6:0\\xed\\xcd\\xcet\\xfb\\x9e\\x10\\xf6Y\\xe9\\xa2O\\x12R\\x0f]\\xee\\xf3\\xf8\\x1b\\x8f@s\\xde\\xaf\\xc6#\\x1f\\x0eZ\\xf4\\xa46\\xb8\\x12\\xf9*\\xb3'\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 秘密鍵を使って暗号化したメッセージを復号します。"
+      ],
+      "metadata": {
+        "id": "IOdhYz6xu7oI"
+      }
     },
     {
       "cell_type": "code",
@@ -336,15 +345,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCEkgVUajXiS",
-        "outputId": "ab59aefe-a821-46d1-ddb4-0b78b53521d8"
+        "outputId": "234982ac-71a0-4797-c182-04c10a548ad9"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "暗号化されたメッセージ: b'\\x8fYW?\\x08\\x8b\\x9fL\\x07\\xedU\\xfe\\xa7c\\xf2X\\xb0;|6a$\\xfd\\xe5S\\x96\\xa1+\\xdf\\x8b\\xdfno5\\x8br+d\\xa4\\xf3\\x87\\x04\\x1c\\xb8\\x150W\\xee\\x89\\xb3T\\x19<=\\xc4\\xfb\\xed)\\xd7\\xaeS\\xe5^\\x98\\xfb\\x90N\\xc67\\xdf\\xf5\\xf9Ie)\\x92\\x94+\\x9b\\xa6\\xfb[\\x14\\x8b\\xa5\\xa9\\xf7\\x08N\\xd8A\\x1a3\\xb2!\\xf0\\xfc\\xbfe8\\x0c\\x10\\xd3\\x1fIn\\x84c\\xfe\\nC\\xe3\\x9d\\xcc8\\xea\\x8f\\x1e\\x87h\\xf9\\xa8\\x01\\xb7\\xf2\\x10|\\xcc>\\xc4\\x88\\xf90x\\x03\\x12\\xe1?\\xcbG7\\n\\xea8Jl\\xd7%o\"7U5:*\\xc9[T\\x06\\x9d\\x03&4\\xe8\\xea\\x8dU\\xf8$\\x8f\\x0e>\\x99\\xaeY\\x08|)>\\xceU^\\xce\\xb2\\x08!c\\x00\\xb3\\xde^\\xabu\\xd0\\x9b\\x10\\xe1M|$\\x14\\xe0\\x93\\xb9\\xd9\\x1a\\xbd\\xc2\\x8b\\xe2\\x15\\x06\\x9e\\x92\\xe2\\xb0K\\xdcA\\x04>\\xc7VyBk{\\x1a\\xcd\\x96]\\xb4\\xea\\xb2\\x02\\x15\\x1da\\x19Ko0\\x84\\xe5\\x88\\xa4\\x0b\\xa5\\xc1e\\xc0\\xc3\\x06*\\x9b\\t'\n",
+            "暗号化されたメッセージ: b'~r\\xdf\\r\\x84c^[\\x89\\x1c7\\x03\\x8cw!\\xf1\\x8fQ\\xc8\\xbes\\xe4\\xd7\\xbc\\xe5\\xa7\\x0e\\x14\\xfdg\\x8a\\t\\x9a\\'a\\xb2F\\x9e\\x12\\xbf{\\x0f\\xac\\x9cxZ\\xf7\\xfe\\xd9\\xd6\\xd7=?\\x19\\xa2\\xae\\xff\\xf0\\x98W \\xf0\\x9a\\xb4\\xd3\\x14!)\\xab\\xb2\\xaflV\\x06\\xd6\\xaa\\xd6A\\xafvA\\xfd\\xa5QG\\xa0\\x84\\x9a]{[\\xf7\\xa9\\xfdqza,vH\\xd0\\xac]7N\\xab3\\x8bxMi\\x88\\x05\\xc9\\x7f\\r@\\xf8\\xae;\\x17\\xbbj\\xa2\\x1e\\x1c\\xb5\\xcbj+\\'=\\xf0z\\xc5\\xba2\\x84\\xafW\\x8e\\x18\\xa4\\\\0\\x97\\x84\\xc67\\x18\\x80G2\\xfc\\xe7t\\x1e\\x81\\xea_\\x89\\xc9\\xfd\\rd\\x117\\\\\\x9f$G\\xa1\\x16\\x8dh\\x88#\\xf8\\xb9\\xa2qr_%\\x8e\\x03\\x90\\x86\\xd6\\xc3\\xdf|w\\xdb\\xcc@\\xa4a\\xed\\xd7D3\"\\xdd\\x9fk<\\x1f\\xf1\\xc1J\\xa9\\xf0\\xfe7\\xc6:0\\xed\\xcd\\xcet\\xfb\\x9e\\x10\\xf6Y\\xe9\\xa2O\\x12R\\x0f]\\xee\\xf3\\xf8\\x1b\\x8f@s\\xde\\xaf\\xc6#\\x1f\\x0eZ\\xf4\\xa46\\xb8\\x12\\xf9*\\xb3'\n",
             "復号化されたメッセージ: これは秘密のメッセージです。ほかの人には教えたくない大切な人へのメッセージ.いろいろ書けます\n"
           ]
         }
@@ -360,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cjx_zXRti3XK",
-        "outputId": "7ff293c1-47ba-43e5-e01f-d8be04e45424"
+        "outputId": "b4487758-e4a9-4a7a-fb75-4bb1d25a87d1"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
